[package]
name = "uuid_diesel_0_7_pg"
version = "0.1.3"
authors = ["Terry Raimondo <terry.raimondo@gmail.com>"]
edition = "2018"
description = "Allows Uuid > v0.7.0 to be used with current diesel (1.3.3)"
license = "MIT"
repository = "https://github.com/terry90/uuid_diesel_0_7_pg"
 
[dependencies]
diesel = { version = "1.3.3", features = ["uuid", "postgres"] }
diesel_derives = { version = "1.3.0" }
uuid = { version = "0.7", features = ["serde"] }
serde = "1.0.80"
serde_derive = "1.0.80"
